refactor(devx): add batch mode and CLI options to backfill script
The backfill shell loop was slow and fragile — each book spawned a new JVM.
The Java script now accepts --id-file for batch processing in a single JVM,
plus --base-url, --model, and --api-key for runtime AI overrides. The Makefile
passes these as CLI args instead of environment variables, fixes the
postgres:// → postgresql:// JDBC URL scheme, and adds --rerun-tasks to ensure
fresh compilation.

- Rewrite BackfillBookAiSeoMetadata with ParsedOptions record and batch loop
- Add --id-file, --base-url, --model, --api-key CLI options
- Update backfill-ai-seo.mk to pass args and normalize JDBC URL scheme
- Update docs/development.md with corrected override syntax